[gd_scene load_steps=19 format=2]

[ext_resource path="res://Juego/Naves/BaseEnemiga/spaceStation_029-c.png" type="Texture" id=1]
[ext_resource path="res://Juego/Naves/BaseEnemiga/spaceStation_023-c.png" type="Texture" id=2]
[ext_resource path="res://Juego/Naves/BaseEnemiga/spaceStation_017-c.png" type="Texture" id=3]
[ext_resource path="res://Juego/Naves/BaseEnemiga/spaceStation_028-c.png" type="Texture" id=4]
[ext_resource path="res://Juego/Naves/BaseEnemiga/spaceStation_022-c.png" type="Texture" id=5]
[ext_resource path="res://Juego/Naves/dotWhite-c.png" type="Texture" id=6]
[ext_resource path="res://Juego/Naves/BaseEnemiga/BaseEnemiga.gd" type="Script" id=7]
[ext_resource path="res://Juego/Enemigos/Area_colision_enemigo.gd" type="Script" id=8]
[ext_resource path="res://Juego/Naves/BaseEnemiga/AreaAtraccion.gd" type="Script" id=9]
[ext_resource path="res://Juego/Naves/impactMetal_000.ogg" type="AudioStream" id=10]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/spaceStation_024.png-fba5c9b44a33d0031c8f1ebbab999a4e.stex"

[sub_resource type="CapsuleShape2D" id=2]
radius = 49.0
height = 396.0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 137.5, 21 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 87, 16.5 )

[sub_resource type="CircleShape2D" id=3]
radius = 539.268

[sub_resource type="Animation" id=4]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaAtraccion/SpriteZonaRecarga:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.737255, 0.0901961, 0.843137, 0.623529 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "rotacion_antihorario"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaAtraccion/SpriteZonaRecarga:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.737255, 0.0901961, 0.843137, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "rotacion_horario"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaAtraccion/SpriteZonaRecarga:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.737255, 0.0901961, 0.843137, 0 ) ]
}

[node name="BaseEnemiga" type="Node2D"]
rotation = 2.26195
z_index = 5
script = ExtResource( 7 )
hitpoints = 100.0

[node name="Sprites" type="Node2D" parent="."]

[node name="SpaceStation024" type="Sprite" parent="Sprites"]
position = Vector2( -4, -46 )
texture = SubResource( 1 )

[node name="SpaceStation017" type="Sprite" parent="Sprites"]
position = Vector2( -45, -46 )
rotation = 3.14159
texture = ExtResource( 3 )

[node name="SpaceStation018" type="Sprite" parent="Sprites"]
position = Vector2( 47, -46 )
texture = ExtResource( 3 )

[node name="SpaceStation028" type="Sprite" parent="Sprites"]
position = Vector2( 3, 213 )
rotation = -3.14159
texture = ExtResource( 4 )

[node name="SpaceStation029" type="Sprite" parent="Sprites"]
position = Vector2( 2, 167 )
texture = ExtResource( 1 )

[node name="SpaceStation022" type="Sprite" parent="Sprites"]
position = Vector2( 1, 33 )
texture = ExtResource( 5 )

[node name="SpaceStation025" type="Sprite" parent="Sprites"]
position = Vector2( 1, -96 )
texture = ExtResource( 5 )

[node name="SpaceStation023" type="Sprite" parent="Sprites"]
position = Vector2( 120, -145 )
rotation = 1.57079
texture = ExtResource( 2 )

[node name="AreaColision" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 9
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 0, -1 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 0.5, -143 )
shape = SubResource( 7 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="AreaColision"]
position = Vector2( 1, -45.5 )
shape = SubResource( 8 )

[node name="AreaAtraccion" type="Area2D" parent="."]
collision_layer = 0
space_override = 1
gravity_point = true
gravity = 1000.0
script = ExtResource( 9 )

[node name="SpriteZonaRecarga" type="Sprite" parent="AreaAtraccion"]
modulate = Color( 0.737255, 0.0901961, 0.843137, 0 )
scale = Vector2( 45.36, 45.36 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAtraccion"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 4 )
anims/rotacion_antihorario = SubResource( 5 )
anims/rotacion_horario = SubResource( 6 )

[node name="ImpactoSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
[connection signal="body_entered" from="AreaAtraccion" to="AreaAtraccion" method="_on_AreaAtraccion_body_entered"]
[connection signal="body_exited" from="AreaAtraccion" to="AreaAtraccion" method="_on_AreaAtraccion_body_exited"]
